# Opal-Tests

./: .clang_complete  .gitignore  LICENSE
Resources/Models/: boar.3ds
Resources/Scenes/Lines/: scene.json
Resources/Scenes/Test/: scene.json
Resources/Shaders/: shader_vs.glsl
Resources/Shaders/normal/: normal_gs.glsl
Resources/Shaders/staticmodel/: staticmodel_fs.glsl
Resources/Textures/wolf/: wolf.tga
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_flags.txt  main.cc  scene  scene.cc  scene.hh  sunsystem.cc  sunsystem.hh  systems.cc  systems.hh  test.json
test/Resources/Models/: wolf.3ds
test/Resources/Scenes/Test/: inputs.lua  main.lua  scene.json
test/Resources/Shaders/: shader_gs.glsl
test/Resources/Shaders/line/: line_fs.glsl  line_vs.glsl
test/Resources/Shaders/model/: model_fs.glsl  model_vs.glsl
test/Resources/Shaders/normal/: normal_fs.glsl  normal_vs.glsl
test/Resources/Shaders/staticmodel/: staticmodel_vs.glsl
test/Resources/Terrains/terrain_patch1/: heightmap.tga  texture.tga
